remove laptop image

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<h3>Things I Can Do</h3>
 									<p>As a fullstack software engineer focusing on web development, I can provide services that fulfill all of your website and web application needs. Listed are some of the products and services that I can provide, as well as the process of what it would be like working with me</p>
 									<section class="flex">
-										<img src="images/laptop.jpeg" alt="Person coding">
+										<!-- <img src="images/laptop.jpeg" alt="Person coding"> -->
 										<ul class="feature-icons">
 											<li class="icon solid fa-code"><strong>Consultation - </strong>We discuss project ideas and goals</li>
 											<li class="icon solid fa-cubes"><strong>Proposal - </strong>After consulting, I will put together a proposal to describe what I will provide in what timeframe and for what price</li>
