--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/bodyshot.jpg" alt="" />
+									<img src="images/laptop.jpeg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -68,8 +68,8 @@
 									<section class="flex">
 										<!-- <img src="images/laptop.jpeg" alt="Person coding"> -->
 										<ul class="feature-icons">
-											<li class="icon solid fa-code"><strong>Consultation - </strong>We discuss project ideas and goals</li>
-											<li class="icon solid fa-cubes"><strong>Proposal - </strong>After consulting, I will put together a proposal to describe what I will provide in what timeframe and for what price</li>
+											<li class="icon solid fa-code"><strong>Consultation - </strong>We discuss project ideas and goals to see if it is a good fit</li>
+											<li class="icon solid fa-cubes"><strong>Proposal - </strong> I will put together a proposal to describe what I will provide in what timeframe and for what price</li>
 											<li class="icon solid fa-book"><strong>Building and Testing -</strong>During the building process, I will keep regular contact with the customer on a weekly basis with updates on the project to keep your mind at ease.</li>
 											<li class="icon solid fa-coffee"><strong>Launch - </strong>Product is delivered, and additional support is avaiable if needed.</li>
 											<!-- <li class="icon solid fa-bolt">Lightning bolt</li>
