--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 						<li><a href="https://twitter.com/RDabrusco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class='label'>LinkedIn</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/bob1342678" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ryan-dabrusco-b31718200/" class="icon brands fa-linkedin-in"><span class='label'>LinkedIn</span></a></li>
+						<li><a href="mailto:rdabrusco@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
