add reference and image to TONKTOSU

--- a/index.html
+++ b/index.html
@@ -88,24 +88,24 @@
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
-											<a href="https://salon-chic.netlify.app/" class="image"><img src="images/Salon-Chic.png" alt="" /></a>
+											<a href="https://salon-chic.netlify.app/" class="image"><img src="images/Salon-Chic.png" alt="Salon-Chic website splash" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Salon-Chic</h4>
+												<p>A website for a high end salon that focuses on readability and simplicity. </p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://tonkotsu-portfolio.netlify.app/" class="image"><img src="images/TONKOTSU.png" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>TONKOTSU</h4>
+												<p>A ramen restaurant that is easy to navigate and brings the user in by showcasings its beautiful food.</p>
 											</div>
 										</article>
-										<article>
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p> -->
 											</div>
 										</article>
 									</div>
