change projects text

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Projects</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Check out a few projects I have worked on recently!</p>
 									<div class="features">
 										<article>
 											<a href="https://salon-chic.netlify.app/" class="image"><img src="images/Salon-Chic.png" alt="Salon-Chic website splash" /></a>
