--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<h2>Hi, I'm Ryan, a fullstack software engineer.</h2>
 										<p>About</p>
 									</header>
-									<p>As a musician, I gained many problem solving skills that have helped me become the person I am today, as well has the persistence to put in the time that I need to be able to bring a solution to the table. </p>
+									<p>As a musician, I gained many problem solving skills that have helped me become the person I am today, as well as the persistence to put in the time that I need to be able to bring a solution to the table. </p>
 								</div>
 							</section>
 
