--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="google-site-verification" content="EjxsalEycDDVN_rx8mIQQN63XcAsWrLQGtkfEeB09dY" />
 	</head>
 	<body class="is-preload">
 
