move google verification and add positano

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
 									<p>Check out a few projects I have worked on recently!</p>
 									<div class="features">
 										<article>
+											<a href="https://www.positanosboca.com/" class="image"><img src="images/POSITANOS-FULL.png" alt="Positanos Website" /></a>
+											<div class="inner">
+												<h4>POSITANO'S</h4>
+												<p>A website that showcases the restaurants food and its history. </p>
+											</div>
+										</article>
+										<article>
 											<a href="https://salon-chic.netlify.app/" class="image"><img src="images/Salon-Chic.png" alt="Salon-Chic website splash" /></a>
 											<div class="inner">
 												<h4>Salon-Chic</h4>
