--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 									<p>Check out a few projects I have worked on recently!</p>
 									<div class="features">
 										<article>
-											<a href="https://www.positanosboca.com/" class="image"><img src="images/POSITANOS-FULL.png" alt="Positanos Website" /></a>
+											<a href="https://www.positanosboca.com/" class="image"><img src="images/POSITANOS-FULL.png" class='pic' alt="Positanos Website" /></a>
 											<div class="inner">
 												<h4>POSITANO'S</h4>
-												<p>A website that showcases the restaurants food and its history. </p>
+												<p>A website that showcases the restaurants food and its history.</p>
 											</div>
 										</article>
 										<article>
