add video for positano site image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
 									<p>Check out a few projects I have worked on recently!</p>
 									<div class="features">
 										<article>
-											<a href="https://www.positanosboca.com/" class="image"><img src="images/POSITANOS-FULL.png" class='pic' alt="Positanos Website" /></a>
+											<a href="https://www.positanosboca.com/" class="image">
+												<video id="pos" autoplay loop muted playsinline>
+													<source src="images/positanos.mp4" type="video/webm">
+													<source src="images/positanos.mp4" type="video/mp4">
+												</video>
+											</a>	
 											<div class="inner">
 												<h4>POSITANO'S</h4>
 												<p>A website that showcases the restaurants food and its history.</p>
