add video thumbnail for tonkotsu and salon

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 									<div class="features">
 										<article>
 											<a href="https://www.positanosboca.com/" class="image">
-												<video id="pos" autoplay loop muted playsinline>
-													<source src="images/positanos.mp4" type="video/webm">
+												<video class="vid" autoplay loop muted playsinline>
+													<source src="images/positanos.webm" type="video/webm">
 													<source src="images/positanos.mp4" type="video/mp4">
 												</video>
 											</a>	
@@ -101,14 +101,22 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://salon-chic.netlify.app/" class="image"><img src="images/Salon-Chic.png" alt="Salon-Chic website splash" /></a>
+											<a href="https://salon-chic.netlify.app/" class="image">
+												<video class="vid" autoplay loop muted playsinline>
+													<source src="images/salon.mp4" type="video/webm">
+												</video>
+											</a>
 											<div class="inner">
 												<h4>Salon-Chic</h4>
 												<p>A website for a high end salon that focuses on readability and simplicity. </p>
 											</div>
 										</article>
 										<article>
-											<a href="https://tonkotsu-portfolio.netlify.app/" class="image"><img src="images/TONKOTSU.png" alt="" /></a>
+											<a href="https://tonkotsu-portfolio.netlify.app/" class="image">
+												<video class="vid" autoplay loop muted playsinline>
+													<source src="images/TONKOTSU.mp4" type="video/webm">
+												</video>
+											</a>
 											<div class="inner">
 												<h4>TONKOTSU</h4>
 												<p>A ramen restaurant that is easy to navigate and brings the user in by showcasings its beautiful food.</p>
