add meta description to head

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Ryan DaBrusco</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+		<meta name="description" content="Ryan DaBrusco Full Stack Software Engineer Web Developer Portfolio">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta name="google-site-verification" content="EjxsalEycDDVN_rx8mIQQN63XcAsWrLQGtkfEeB09dY" />
 	</head>
