add content to about section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 										<p>About</p>
 									</header>
 									<p>As a musician, I gained many problem solving skills that have helped me become the person I am today, as well as the persistence to put in the time that I need to be able to bring a solution to the table. </p>
+									<p>Goal-oriented developer with a passion for solving complex problems efficiently.  Adept at working on multiple projects simultaneously, as well as adapting quickly to new situations.</p>
+									<p>I worked for a cruise ship company as a musician for several years after college, where I was able to experience a constantly shifting team while still delivering consistent results both as a team and individually.  Due to the pandemic, I decided to transition to software engineering and utilize my creative skills to create value and help local businesses. I am now looking to bring my skills to join a team to build bigger and better applications.
+									</p>
 								</div>
 							</section>
 
