edit skill secion again to service process

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Skills</h3>
+									<h3>Service Process</h3>
 									<p>As a fullstack software engineer focusing on web development, I can provide services that fulfill all of your website and web application needs. Listed are some of the products and services that I can provide, as well as the process of what it would be like working with me</p>
 									<section class="flex">
 										<ul class="feature-icons">
