change wording on service process section

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 							<section id="two">
 								<div class="container">
 									<h3>Service Process</h3>
-									<p>As a fullstack software engineer focusing on web development, I can provide services that fulfill all of your website and web application needs. Listed are some of the products and services that I can provide, as well as the process of what it would be like working with me</p>
+									<p>As a fullstack software engineer focused on web development, I provide services to fulfill your website and web application needs.</p>
 									<section class="flex">
 										<ul class="feature-icons">
 											<li class="icon solid fa-code"><strong>Consultation - </strong>We discuss project ideas and goals to see if it is a good fit</li>
 											<li class="icon solid fa-cubes"><strong>Proposal - </strong> I will put together a proposal to describe what I will provide in what timeframe and for what price</li>
-											<li class="icon solid fa-book"><strong>Building and Testing -</strong>During the building process, I will keep regular contact with the customer on a weekly basis with updates on the project to keep your mind at ease.</li>
-											<li class="icon solid fa-coffee"><strong>Launch - </strong>Product is delivered, and additional support is avaiable if needed.</li>
+											<li class="icon solid fa-book"><strong>Building and Testing -</strong>Provides prompt responses, weekly updates, and testing on multiple screen sizes.</li>
+											<li class="icon solid fa-coffee"><strong>Launch - </strong>Product is delivered, and additional support is available if needed.</li>
 
 									</section>
 									
