--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://twitter.com/RDabrusco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/bob1342678" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/rdabrusco" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/ryan-dabrusco-b31718200/" class="icon brands fa-linkedin-in"><span class='label'>LinkedIn</span></a></li>
 						<li><a href="mailto:rdabrusco@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
